# tokki

./: Cargo.toml  README.md
.cargo/: config.toml
crates/api/: Cargo.toml
crates/api/examples/: test.rs
crates/api/src/: api_error_response.rs  client.rs  client_error.rs  get_records.rs  put_record.rs
crates/api/src/clustering/: mod.rs  replicate_log.rs
crates/common/: Cargo.toml
crates/common/src/hmac/: hmac_form.rs  hmac_value.rs  mod.rs
crates/tokki/: Cargo.toml
crates/tokki-api/: Cargo.toml
crates/tokki-api/examples/: test.rs
crates/tokki-api/src/: client.rs  get_records.rs  healthcheck.rs  lib.rs  profiling.rs  put_record.rs
crates/tokki-api/src/clustering/: mod.rs  replicate_log.rs
crates/tokki-client/: Cargo.toml
crates/tokki-client/src/: cli.rs  main.rs
crates/tokki-client/src/commands/: load_test.rs  mod.rs
crates/tokki-common/: Cargo.toml
crates/tokki-common/src/: lib.rs  offset.rs  record.rs
crates/tokki-common/src/hmac/: error.rs
crates/tokki/src/: app_state.rs  cli.rs  controller_error.rs  error.rs  lib.rs  log.rs  main.rs  server.rs  server_error.rs
crates/tokki/src/app_state/: builder.rs  mod.rs  state.rs
crates/tokki/src/app_state/builder/: follower.rs  leader.rs  mod.rs
crates/tokki/src/controllers/: get_records.rs  get_shards.rs  healthcheck.rs  mod.rs  profiling.rs  put_records.rs
crates/tokki/src/replication/: mod.rs  waiting_request.rs
crates/tokki/src/storage/: disk.rs  disk_future.rs  in_memory.rs  in_memory_channel.rs  in_memory_lockfree.rs  mod.rs
crates/tokki/systemd/: tokki.service
scripts/: build-linux.sh
