[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sam Cutler <sam.cutler@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/itsibitzi/tokki"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["json", "macros"] }
axum-metrics = "0.2.0"
clap = { version = "4.5.43", features = ["derive"] }
futures = "0.3.31"
gxhash = "3.5.0"
hmac = "0.12.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
pprof = { version = "0.15", features = ["flamegraph"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
serde_with = { version = "3.14.0", features = ["hex"] }
sha2 = "0.10.9"
snafu = "0.8.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
url_serde = "0.2.0"

[profile.release]
debug = true
