[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
reqwest.workspace = true
hmac.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
url_serde.workspace = true

common.path = "../common"

[features]
clustering = []
