[package]
name = "tokki-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
gxhash.workspace = true
snafu.workspace = true
hmac.workspace = true
sha2.workspace = true
tracing.workspace = true
serde_with.workspace = true
reqwest.workspace = true
