[package]
name = "tokki"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-metrics.workspace = true
clap.workspace = true
futures.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

tokki-api = { path = "../tokki-api", features = ["clustering"] }
tokki-common.path = "../tokki-common"

[package.metadata.deb]
maintainer = "Sam Cutler <sam.cutler@protonmail.com>"
revision = ""
depends = "$auto"
priority = "optional"
assets = [["target/release/tokki", "/opt/tokki/bin/", "755"]]
maintainer-scripts = "systemd/"
systemd-units = { enable = true }
